--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
   <meta charset="utf-8">
   <title>Favorite Model</title>
   <style type="text/css">
-    button,
+    .model {
+      color: rgb(243, 146, 162);
+      background-color: darkgrey;
+      font-family: cursive;
+      
+    }
+    #add-model {
+      color: lightblue;
+      background-color: lightsalmon;
+      font-family:cursive;
+    }
+    body {
+      background-color:lemonchiffon;
+    }
+    h1 {
+      color: fuchsia;
+    }
+
     div,
     form,
     input {
